AgentforceSysmapEmpreendimentos/force-app/main/default/objects/Empreendimento__c/fields/Bairro__c.field-meta.xml
<CustomField>
    <fullName>Bairro__c</fullName>
    <label>Bairro</label>
    <length>100</length>
    <type>Text</type>
</CustomField>