AgentforceSysmapEmpreendimentos/force-app/main/default/objects/Empreendimento__c/fields/Diferenciais__c.field-meta.xml
<CustomField>
    <fullName>Diferenciais__c</fullName>
    <label>Diferenciais</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>