AgentforceSysmapEmpreendimentos/force-app/main/default/objects/Empreendimento__c/fields/Endereco__c.field-meta.xml
<CustomField>
    <fullName>Endereco__c</fullName>
    <label>Endereco</label>
    <type>TextArea</type>
</CustomField>