AgentforceSysmapEmpreendimentos/force-app/main/default/objects/Empreendimento__c/fields/Lazer__c.field-meta.xml
<CustomField>
    <fullName>Lazer__c</fullName>
    <label>Areas de Lazer</label>
    <type>TextArea</type>
</CustomField>