AgentforceSysmapEmpreendimentos/force-app/main/default/objects/Empreendimento__c/fields/Ponto_Venda__c.field-meta.xml
<CustomField>
    <fullName>Ponto_Venda__c</fullName>
    <label>Ponto de Venda</label>
    <length>255</length>
    <type>Text</type>
</CustomField>