AgentforceSysmapEmpreendimentos/force-app/main/default/objects/Empreendimento__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Em Lancamento</fullName>
            </value>
            <value>
                <fullName>Disponivel</fullName>
                <default>true</default>
                <label>Disponivel</label>
            </value>
            <value>
                <fullName>Esgotado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>